# ml-project-template

./: .gitignore  LICENSE  README.md  ml-template-mkdir.sh  pyproject.toml  pytorch-template.sh
.github/workflows/: release.yml
MlTemplateBuilder/cli/: __main__.py
mltemplate/cli/: __main__.py
mltemplate/keras_template/: Dockerfile.cpu  Dockerfile.gpu  README.md  jupyter.sh
mltemplate/keras_template/keras_template/: __main__.py
mltemplate/keras_template/keras_template/cli/: predict.py  train.py
mltemplate/keras_template/keras_template/src/: datasets.py  models.py  transforms.py
mltemplate/pytorch_template/: Dockerfile.cpu  README.md
mltemplate/pytorch_template/pytorch_template/: __main__.py
mltemplate/pytorch_template/pytorch_template/src/: datasets.py  transforms.py
mltemplate/scripts/: pytorch-template.sh  template.sh
pytorch_template/: Dockerfile.cpu  Dockerfile.gpu  Makefile  requirements.txt
pytorch_template/pytorch_template/cli/: predict.py  train.py
pytorch_template/pytorch_template/src/: models.py
template/: Dockerfile.gpu  Makefile  README.md  pyproject.toml
template/template/: models.py
template/template/cli/: __main__.py  predict.py  train.py
test/: Dockerfile.cpu  Dockerfile.gpu  Makefile  pyproject.toml  requirements.in
test/test/: datasets.py  transforms.py
test/test/cli/: __main__.py  predict.py  train.py
