[tool.poetry]
name = "mltemplate"
version = "0.1.0"
description = "Templating tool with boiler plate code for building robust machine learning projects in python."
authors = ["Sowmya Yellapragada <sowmyayellapragada@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sowmyay/ml-project-template"
repository = "https://github.com/sowmyay/ml-project-template"
keywords = ["template", "machine learning", "pytorch", "deep learning"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
mltemplate = "mltemplate.cli.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"